<resources>
    <string name="app_name">Medical Preparedness</string>
    <string name="app_support">pinimento@gmail.com</string>


    <string name="app_preferences">Settings</string>
    <string name="app_notifications">Notifications</string>

    <string name="menu_about">About</string>
    <string name="menu_backup">Backup</string>

    <string name="title_overview">Bestand</string>
    <string name="title_analyzer">Analyse</string>
    <string name="title_maintain">Empfehlung</string>

    <string name="analyze_ok">Bestellen in %s Tagen</string>
    <string name="analyze_stockup">Nachschub empfohlen</string>
    <string name="analyze_emergency">Nachschub umgehend erforderlich</string>

    <!-- records -->
    <string name="dialog_add">Add</string>
    <string name="dialog_add_confirm">Save</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Remove</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_saved_confirmation">Saved</string>

    <!-- moves -->
    <string name="dialog_selected_up">selected up</string>
    <string name="dialog_selected_down">selected down</string>

    <string name="record_add">New Exposé</string>
    <string name="record_select">Select an Exposé</string>
    <string name="record_select_model">Select a Snapshot</string>

    <string name="record_delete_warning">The item will be removed from your device.</string>

    <string name="action_print">print</string>
    <string name="action_email">send</string>
    <string name="action_data_warning">Vorsicht beim Teilen persönlicher Daten</string>

    <string name="report_generation">Der Report wird erstellt...</string>
    <string name="report_select">Select an Exposé</string>
    <string name="report_select_model">Select a Snapshot</string>


    <!-- diagram -->
    <string name="diagram_notice1">image > edit\n
        text > select</string>

    <string name="diagram_notice2">image > edit\n
        date > load</string>

    <string name="diagram_notice3">image > load</string>

    <string name="diagram_notice4">date > edit\n
        text > focus
        \ntext double > open</string>

    <string name="diagram_error">Das ist hier nicht möglich.</string>
    <!--
    <string name="diagram_notice2">date > edit
        \ntext > open</string>
    -->



    <!-- model -->
    <string name="default_title">generated</string>
    <string name="default_subject">Placeholder</string>


    <string name="model_id">Id</string>
    <string name="model_date">Date</string>
    <string name="model_type">Type</string>
    <string name="model_state">State</string>
    <string name="model_symbol">Symbol</string>
    <string name="model_title">Title</string>
    <string name="model_subject">Subject</string>
    <string name="model_content">Content</string>
    <string name="model_targets">Targets</string>
    <string name="model_tags">Tags</string>
    <string name="model_specs">Specs</string>
    <string name="model_location">Location</string>
    <string name="model_coordinates">Coordinates</string>



    <string name="med_type">Einnahme</string>
    <string name="med_state">Status</string>
    <string name="med_title">Andwendung bei</string>
    <string name="med_subject">Medik. Name</string>
    <string name="med_content">Dosierung</string>
    <string name="med_tags">Einnahmezeiten</string>
    <string name="med_specs">Packung</string>
    <string name="med_location">""</string>

    <string name="snapshot">Snapshot</string>
    <string name="states">States</string>

</resources>