<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- action symbols
    <group android:id="@+id/navigation" >
        <item
            android:id="@+id/navigate_top"
            android:title="°"
            app:showAsAction="always|withText" />

    </group>
    -->


    <group android:id="@+id/system">
        <item
            android:id="@+id/action_backup"
            android:title="@string/menu_backup" />
        <item
            android:id="@+id/action_settings"
            android:title="@string/app_preferences" />
    </group>
    <group android:id="@+id/app" >
        <item
            android:id="@+id/action_about"
            android:title="@string/menu_about" />
    </group>
</menu>