<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/app_overview">

    <fragment
        android:id="@+id/app_overview"
        android:name="med.prep.ui.AppOverview"
        android:label="@string/title_overview"
        tools:layout="@layout/diagram_overview" />

    <fragment
        android:id="@+id/app_analyzer"
        android:name="med.prep.ui.AppAnalyzer"
        android:label="@string/title_analyzer"
        tools:layout="@layout/diagram_overview" />

    <fragment
        android:id="@+id/app_maintain"
        android:name="med.prep.ui.AppMaintain"
        android:label="@string/title_maintain"
        tools:layout="@layout/diagram_overview" />
</navigation>