<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:padding="4dp">


    <LinearLayout
        android:id="@+id/item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:contentDescription="@string/model_id"
            app:srcCompat="@drawable/pill28" />

        <Button
            android:id="@+id/item_add"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/app_progress_notification"
            android:text="+" />

        <LinearLayout
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/item_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/model_date"
                        android:textColor="@color/blue_300"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/item_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/model_type"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/item_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/model_state"
                        android:textSize="12sp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/model_title"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/item_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:text="@string/model_subject"
                        android:textSize="16sp"
                        android:visibility="visible" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/item_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/model_content"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/item_specs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/model_specs"
                        android:textSize="1sp"
                        tools:visibility="gone" />

                    <TextView
                        android:id="@+id/item_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/model_tags"
                        android:textSize="11sp"
                        tools:visibility="visible" />


                    <!--

                    -->


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:orientation="horizontal"
                android:padding="4dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/item_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/model_location"
                    android:textSize="13sp" />

                <ImageButton
                    android:id="@+id/open_location"
                    style="@android:style/Widget.DeviceDefault.ImageButton"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@android:drawable/ic_input_get"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>